# KuiperHunter

./: .gitignore  README.md  make_hero.py  pick_hero.py  requirements.txt
InjectionEngine/: pyproject.toml
InjectionEngine/checkpoints/: baseline2d_best.pt  baseline2d_best_log.json  unet3d_local_best.pt  unet3d_smoke.pt  unet3d_smoke_log.json
InjectionEngine/demo/: demo.py  make_demo_cases.py  run_demo.py
InjectionEngine/docs/plans/: 2026-02-18-step2-kbo-priors-impl.md  2026-02-18-step2-priors-design.md  2026-02-18-step3-data-pipeline.md  2026-02-19-step1-3-verification-design.md  2026-02-19-step1-3-verification-plan.md  2026-02-19-step4-baseline2d-plan.md  2026-02-20-demo-ready.md
InjectionEngine/docs/verification/: pytest_baseline.txt  pytest_final.txt  step1-3.md  step4_local.txt
InjectionEngine/src/data/: __init__.py  background.py  build_one_stack.py  load_stack.py  make_demo_cases.py  patches.py  psf_estimator.py  register.py
InjectionEngine/src/injector/: __init__.py  injector.py  kbo_prior.py  priors.py  render_psf.py  sanity.py  targets.py  trajectory.py
InjectionEngine/src/model/: __init__.py  dataset.py  infer.py  model.py  train.py
InjectionEngine/tests/: conftest.py  test_data_background.py  test_data_build_one_stack.py  test_data_load_stack.py  test_data_patches.py  test_data_psf_estimator.py  test_data_register.py  test_injection.py  test_integration.py  test_kbo_prior.py  test_make_demo_cases.py  test_render_psf.py  test_sanity_priors.py  test_step4_smoke.py  test_targets.py  test_trajectory.py
config/: default_simulation.yaml  (+2 more)
(+25 files in other folders)
