[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "injection-engine"
version = "0.1.0"
description = "Synthetic moving-source injection into astronomical image stacks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
demo = ["matplotlib>=3.7"]
dev  = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
