[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "injection-engine"
version = "0.1.0"
description = "Synthetic moving-source injection into astronomical image stacks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "astropy>=5.0",
    "zarr>=2.16,<3.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
demo = ["matplotlib>=3.7"]
dev  = ["pytest>=7"]

[project.scripts]
kuiper-build-stack = "data.build_one_stack:main"
kuiper-make-cases  = "data.make_demo_cases:main"

[tool.setuptools.packages.find]
where = ["src"]
